# rules_go

./: .travis.yml  BUILD.bazel  README.rst  WORKSPACE
go/: checks.rst  core.rst  def.bzl  nogo.rst  providers.rst
go/private/: BUILD.checker.bazel  checker.bzl  common.bzl  context.bzl  mode.bzl  nogo.bzl  providers.bzl  repositories.bzl  sdk.bzl
go/private/actions/: archive.bzl  binary.bzl  compile.bzl  cover.bzl  link.bzl
go/private/rules/: binary.bzl  builders.bzl  cgo.bzl  checker.bzl  library.bzl  nogo.bzl  rule.bzl  source.bzl  stdlib.bzl  test.bzl  wrappers.bzl
go/private/tools/: path.bzl
go/toolchain/: toolchains.bzl
go/tools/analysis/: BUILD.bazel  analysis.go
go/tools/builders/: BUILD.bazel  checker_main.go  compile.go  cover.go  env.go  generate_checker_main.go  generate_nogo_main.go  generate_test_main.go  link.go  nogo_main.go  pack.go  stdlib.go  vet.go
proto/: compiler.bzl  def.bzl
tests/: bazel_tests.bzl
tests/core/: README.rst
tests/core/cgo/: BUILD.bazel  README.rst
tests/core/checks/: README.rst  common.bzl
tests/core/checks/custom/: BUILD.bazel  README.rst  config.json  foo_func.go  foo_func_check.go  has_errors.go  import_fmt.go  import_fmt_check.go  no_errors.go  return_bool_check.go
tests/core/checks/custom/return_bool/: return_bool.go
tests/core/checks/default/: BUILD.bazel  README.rst  lib.go
tests/core/checks/vet/: BUILD.bazel  README.rst
tests/core/nogo/: README.rst  common.bzl
tests/core/nogo/custom/: BUILD.bazel  README.rst  has_errors.go
tests/integration/popular_repos/: BUILD.bazel  README.rst  popular_repos.py
