# Add this test back after support for vet has been added.

# load("@io_bazel_rules_go//go:def.bzl", "go_library")
# load("@io_bazel_rules_go//tests:bazel_tests.bzl", "bazel_test")

# default_checker_error = """
# if [[ result -eq 0 ]]; then
#   echo "error: expected build error" >&2
#   result=1
# else
#   grep -q 'TODO: fill with default check failure' bazel-output.txt
#   if [[ $? -ne 0 ]]; then
#     echo "error: expected error message was not emitted" >&2
#     result=1
#   else
#     result=0
#   fi
# fi
# """

# bazel_test(
#     name = "checker_error",
#     check = default_checker_error,
#     command = "build",
#     targets = [":lib"],
# )

# go_library(
#     name = "lib",
#     srcs = ["lib.go"],
#     importpath = "lib",
# )
